pattern proxy + fixes